tests/fixtures/invalid/convert_qualified_unit.gcl
// error: `u` is not a module alias in this file, so `u.mile` cannot resolve
// (D003). Qualified unit references require `import <module> as u;`.
param a: Length = 3218.688 m;
node bad: Length = @a -> u.mile;
